<resources>
    <string name="app_name">WazzApp</string>
    <string name="header">Wazzup</string>
    <string name="shareChooserText">Udostępnij przez:</string>
    <string name="LikeGDAK">Polub nas na Facebook</string>
    <string name="SubWazzup">Subskrybuj Wazzup\'a!</string>
    <string name="STASIO">STASIO</string>
    <string name="LYSY">ŁYSY</string>
    <string name="GIENEK">GIENEK</string>
    <string name="POLICJANT">POLICJANT</string>
    <string name="RAFALEK">RAFAŁEK</string>
    <string name="LikeWazzup">Polub Wazzup na Facebook</string>
    <string name="chooser_text_main">SZKOŁA \nDRUCIARSTWA</string>
    <string name="contentDescription_gdakLogo">Logo Twórców Aplikacji</string>
    <string name="app_banner_icon">App Icon</string>
    <string name="youtube_icon">youtube_icon</string>
    <string name="fb_icon">fb_icon</string>
    <string name="smartphone_gdak_logo">LogoGdak</string>
    <string name="favourites">U L U B I O N E</string>
    <string name="title_activity_advertisement">Advertisement</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-8475463322232180/3754193475</string>



</resources>
