<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WholeContent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bannerTxt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/chooser_text_main"
                    android:fontFamily="@font/vacerserifboldpersonal"
                    android:textColor="@android:color/black"
                    android:textSize="34sp" />

                <ImageView
                    android:id="@+id/bannerImg"
                    android:layout_width="178dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_banner_icon"
                    android:layout_weight="3"
                    android:baselineAligned="false"
                    android:scaleType="fitCenter"
                    android:background="@drawable/wazzup_anim" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/changeSourceButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="FAV/ALL" />

        <ScrollView
            android:id="@+id/soundbarScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/soundbar_rootLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/PromoSection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="80dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/likeWazzup_img"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/fb_icon"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/facebook" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/simplifica"
                            android:gravity="center"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/LikeWazzup"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/subWazzup_img"
                            android:contentDescription="@string/youtube_icon"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:layout_marginTop="2.5dp"
                            android:layout_marginBottom="2.5dp"
                            android:background="@drawable/youtube" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/simplifica"
                            android:gravity="center"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/SubWazzup"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/likeGDAK_img"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/smartphone_gdak_logo"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/gdak" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/simplifica"
                            android:gravity="center"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/LikeGDAK"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>