<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooserActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/dashes"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textGrid"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/chooser_text_main"
                android:fontFamily="@font/vacerserifboldpersonal"
                android:textColor="@android:color/black"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="178dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/app_banner_icon"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:scaleType="fitCenter"
                android:background="@drawable/wazzup_anim" />

        </LinearLayout>
        </android.support.v7.widget.CardView>

        <GridLayout
            android:id="@+id/gridFav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            android:rowCount="1">

            <android.support.v7.widget.CardView
                android:id="@+id/favouritesCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true">

                <TextView
                    android:id="@+id/favouritesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/opensansbold"
                    android:text="U L U B I O N E"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>
        </GridLayout>
        <GridLayout
            android:layout_marginTop="5dp"
            android:id="@+id/mainGrid"
            android:columnCount="2"
            android:rowCount="4"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            >

            <!-- Row 1 -->

            <!-- Column 1 -->

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imgBtnStasio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/stasio_anim"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/STASIO" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Column 2 -->
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imgBtnRafalek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rafalek_anim"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/RAFALEK" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!-- Row 2 -->

            <!-- Column 1 -->
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imgBtnGeniu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/GIENEK"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/gieniu_anim"
                        android:scaleType="fitCenter"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Column 2 -->
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imgBtnLysy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/lysy_anim"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/LYSY" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!-- Row 2 -->

            <!-- Column 1 -->
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imgBtnPolicjant"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"

                        android:background="@drawable/policjant_anim"
                        android:contentDescription="@string/POLICJANT"
                        android:scaleType="fitCenter" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Column 2 -->
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imgBtnWholeContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/other_2"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </GridLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>